force-app/main/default/objects/DVC_Tour_Availability_Slot__c/DVC_Tour_Availability_Slot__c.object-meta.xml
<CustomObject>
    <label>Tour Availability Slot</label>
    <pluralLabel>Tour Availability Slots</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Tour Availability Slot Name</label>
        <displayFormat>TAS-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>DMS-4909: Represents an individual generated, fixed-Slot-Interval-width time block under a DVC_Tour_Availability__c record. Booked/Remaining fields are owned and maintained by the guest-facing booking engine, not this generator. See LLD docs/DMS-4909-LLD.md Section 7.4.</description>
</CustomObject>