force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Booked_Onsite_Slots__c.field-meta.xml
<CustomField>
    <fullName>DVC_Booked_Onsite_Slots__c</fullName>
    <label>Booked Onsite Slots</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>0</defaultValue>
    <description>Owned and maintained by the guest-facing booking engine (a separate story), not by DMS-4909. Initialized to 0 at generation time only.</description>
</CustomField>