force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Remaining_Online_Slots__c.field-meta.xml
<CustomField>
    <fullName>DVC_Remaining_Online_Slots__c</fullName>
    <label>Remaining Online Slots</label>
    <type>Number</type>
    <formula>DVC_Total_Online_Capacity__c - DVC_Booked_Online_Slots__c</formula>
    <precision>4</precision>
    <scale>0</scale>
    <description>Formula field consumed by the booking UI to show remaining online availability.</description>
</CustomField>