force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Slot_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>DVC_Slot_End_DateTime__c</fullName>
    <label>Slot End</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Slot Start + parent DVC_Slot_Interval__c (a fixed-width row, not the full Tour Duration window). See LLD Section 10.1.</description>
</CustomField>