force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Slot_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>DVC_Slot_Start_DateTime__c</fullName>
    <label>Slot Start</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Start of this fixed-width slot row (width = parent DVC_Slot_Interval__c). See LLD Section 10.1.</description>
</CustomField>