force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Slot_Status__c.field-meta.xml
<CustomField>
    <fullName>DVC_Slot_Status__c</fullName>
    <label>Slot Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>PLACEHOLDER VALUES PENDING BUSINESS CONFIRMATION (LLD Section 7.4 / Section 20 Item 6). System-managed; set by DVC_TourSlotGenerationService. Open = capacity greater than zero; Closed = guide-occupied or lunch-blocked (capacity zero). Business has floated &quot;Available&quot;/&quot;Booked&quot; as an alternative - if adopted, this picklist and all Apex/LWC references to &quot;Open&quot;/&quot;Closed&quot; must be updated together.</description>
</CustomField>