force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Total_Online_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DVC_Total_Online_Capacity__c</fullName>
    <label>Total Online Capacity</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Seeded from the admin&apos;s transient Online Capacity input on the config form (never persisted on the parent), capped &lt;= DVC_Total_Onsite_Capacity__c for this row (VR-07); admin may further edit per row before Publish (Q6).</description>
</CustomField>