force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Total_Onsite_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DVC_Total_Onsite_Capacity__c</fullName>
    <label>Total Onsite Capacity</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>0</defaultValue>
    <description>Guide-derived capacity for this slot; system-computed and read-only in the Generator UI. This is the &quot;Total Onsite Slots&quot; referenced in UAC9 - not a separate admin input (Q3).</description>
</CustomField>