force-app/main/default/objects/DVC_Tour_Availability_Slot__c/fields/DVC_Tour_Availability__c.field-meta.xml
<CustomField>
    <fullName>DVC_Tour_Availability__c</fullName>
    <label>Tour Availability</label>
    <type>MasterDetail</type>
    <referenceTo>DVC_Tour_Availability__c</referenceTo>
    <relationshipName>DVC_Tour_Availability_Slots</relationshipName>
    <relationshipLabel>Tour Availability Slots</relationshipLabel>
    <required>true</required>
    <description>Parent day&apos;s schedule. Master-Detail so slots are deleted with their parent and inherit sharing.</description>
</CustomField>